force-app/main/default/objects/InHabitant__c/InHabitant__c.object-meta.xml
<CustomObject>
    <label>InHabitant</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>InHabitant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InHabitant</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>