force-app/main/default/objects/InHabitant__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>InHabitant</relationshipLabel>
    <relationshipName>InHabitant</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>