force-app/main/default/objects/InHabitant__c/fields/Inhabitat__c.field-meta.xml
<CustomField>
    <fullName>Inhabitat__c</fullName>
    <label>Inhabitat</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>InHabitant</relationshipLabel>
    <relationshipName>InHabitant</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>