force-app/main/default/objects/InHabitant__c/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <formula>Address__r.Street__c &amp;&quot;, &quot;&amp; Address__r.City__c &amp;&quot;, &quot;&amp; TEXT(Address__r.State__c )&amp;&quot;, &quot;&amp; Address__r.ZipCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MailingAddress</label>
    <type>Text</type>
</CustomField>