force-app/main/default/objects/InHabitant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>MailingAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>